Масштабный рефакторинг приложения
 Основные улучшения:
- Разделение логики на модули (main.py, logic.py, background.py)
- Добавление конфигурации в YAML (config.yaml)
- Поддержка i18n через JSON файлы
- Улучшенная обработка ошибок с конкретными исключениями
- Многопоточная обработка через QThreadPool

 UI улучшения:
- Перенос стилей в QSS файл
- Добавление теней и улучшенного визуального оформления
- Корректная обработка цветовых схем (hex и rgba)

 Технические улучшения:
- Добавлен pre-commit с black и ruff
- Обновлён .gitignore для Python проекта
- Исправлен spec файл для корректной сборки
- Добавлены type hints и docstrings

 Зависимости:
- Добавлен pyyaml в requirements.txt
- Обновлены зависимости для сборки

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,45 @@
 # Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
 *.log
+*.so
 
-# Build
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+*.egg
+
+# PyInstaller
 build/
 dist/
+*.manifest
+*.spec
 
-# Temp
-*.tmp
-*.bak
+# Virtual environment
+venv/
+env/
+.env/
+.venv/
 
-# Excel файлы (если не нужны в репо)
-*.xlsx
-*.xls
-
-# IDE / OS
+# IDE / Editor
 .vscode/
 .idea/
+*.swp
+*.swo
+*.swn
+*.bak
+
+# OS
 .DS_Store
 Thumbs.db
+desktop.ini
+*.lnk
+
+# Project specific
+*.xlsx
+*.xls
+*.csv
+discrepancy_finder.log
+localpycs/
